# haskell-from-first-principles

./: binary.hs  cipher.hs  goats.hs  programmers.hs
cipher/: cipher.cabal
cipher/src/: Main.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
listy/: ListyInstances.hs
morse/app/: Main.hs
morse/src/: Lib.hs
morse/test/: Spec.hs
optional/: optional.cabal
optional/src/: Main.hs
scratch/: database.hs  either.hs  optional.hs  person.hs  poem_lines.hs  read.hs  sample.hs  t_list.hs
semigroup/: semigroup.cabal
semigroup/src/: Main.hs
test/: Addition.hs  addition.cabal
